--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^18.2.8",
     "@google/generative-ai": "^0.21.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "pdfjs": "^2.5.3",
     "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
