--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,19 @@
 {
   "extends": [
     "development"
+  ],
+  "hints": {
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not ios_saf <= 18",
+    "not safari <= 18"
   ]
 }
